Colaboratory を使用して作成しました

--- a/【英語】神奈川入試問２適語補充分析.ipynb
+++ b/【英語】神奈川入試問２適語補充分析.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "【英語】神奈川入試問２適語補充分析.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuXQUv9ua1IqGrQ9jEgvdk",
+      "authorship_tag": "ABX9TyNO+04ZO/Z32Rfa2MKqkant",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6265,6 +6265,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "21xbmpmdMAyz"
+      },
+      "source": [
+        "## **BERTを用いて予測された解答**"
       ]
     },
     {
